declarative/processor/src/test/resources/bad/dataset instance method is not annotated.java
package x;

import com.inrupt.rdf.wrapping.declarative.annotation.Dataset;

@Dataset
interface X {
    Object x();
}
